updated architecture to support: - debugger on both VMs - profiler on both VMs improved debugger